--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   ],
   "author": "Howard Yeh",
   "license": "MIT",
-  "devDependencies": {
+  "dependencies": {
     "neutrino-preset-react": "^7.1.3",
     "ts-loader": "^3.0.2",
     "typescript": "^2.5.3"
